--- a/index.html
+++ b/index.html
@@ -1,73 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List!</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do List</title>
     <!-- CSS External -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
+<body class="bg-sky-50 min-h-screen flex flex-col items-center p-6 font-sans text-gray-800">
+    <header class="w-full max-w-5xl mb-6">
+    <div class="flex justify-between items-center mb-3">
+      <div>
+        <h1 class="text-4xl font-extrabold text-sky-600 select-none">To Do List!</h1>
+        <p class="text-gray-500 mt-1 select-none">Your tool for productivity.</p>
+      </div>
+      <button id="deleteAllBtn" class="bg-red-500 hover:bg-red-600 transition rounded-lg text-white px-4 py-2 flex items-center gap-2 shadow" title="Delete All Tasks" aria-label="Delete All Tasks">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 7L5 21M5 7l14 14" />
+        </svg>
+        Delete All
+      </button>
+    </div>
 
-<body>
-
-    <!-- Hero Website -->
-    <header>
-        <h1 class="text-4xl font-bold text-sky-600 select-none">To Do List!</h1>
+    <section aria-label="Add a new task" class="bg-white rounded-lg p-5 shadow-md select-none">
+        <h2 class="font-bold text-xl mb-1 text-gray-900">Add a New Task</h2>
+        <p class="text-gray-500 mb-4">What do you need to get done?</p>
+        <form id="task-form" class="flex flex-wrap gap-3 items-center" aria-labelledby="addTaskLabel" role="form" novalidate>
+        <input id="task-input" type="text" placeholder="Add a to do..." class="flex-grow min-w-[220px] border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500 transition" aria-label="Task description" required autocomplete="off"/>
+        <input id="due-date-input" type="date" aria-label="Due date" class="border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500 transition max-w-[180px]" required/>
+        <button type="submit" class="bg-sky-600 text-white px-5 py-3 rounded-lg flex items-center gap-2 hover:bg-sky-700 active:bg-sky-800 transition select-none" aria-label="Add Task">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"/>
+          </svg>
+          Add Task
+        </button>
+        </form>
+    </section>
     </header>
 
-    <!-- Main Content, Todo List Form, List Todo -->
-    <main>
-        <form>
-            <input type="text" id="task-input" placeholder="Add a to do..." class="border p-2 rounded">
-            <input type="date" id="due-date-input" class="border p-2 rounded">
-            <button type="button" onclick="validateForm();" class="bg-sky-600 text-white p-[9px] rounded">+ Add Task</button>
-            <button onclick="deleteAll()" class="bg-red-500 text-white p-[9px] rounded">Delete All</button>
-        </form>
+  <main class="w-full max-w-5xl bg-white rounded-lg p-5 shadow-md select-none">
+    <h2 class="font-bold text-2xl mb-4 text-gray-900">Your Tasks</h2>
+    <nav aria-label="Task filters" class="flex flex-wrap gap-3 mb-5 items-center">
+      <div class="flex gap-1 bg-sky-100 rounded-lg border border-sky-300 overflow-hidden select-none">
+        <button class="filter-btn px-4 py-2 bg-white text-sky-800 font-semibold" data-filter="all" aria-pressed="true" type="button">All <span id="countAll" class="ml-1">(0)</span></button>
+        <button class="filter-btn px-4 py-2 text-sky-600 hover:bg-sky-200" data-filter="inprogress" aria-pressed="false" type="button">In Progress <span id="countInProgress" class="ml-1">(0)</span></button>
+        <button class="filter-btn px-4 py-2 text-sky-600 hover:bg-sky-200 rounded-r-lg" data-filter="completed" aria-pressed="false" type="button">Completed <span id="countCompleted" class="ml-1">(0)</span></button>
+      </div>
+      <select id="date-filter" aria-label="Filter by due date" class="border border-gray-300 rounded-lg p-2 cursor-pointer max-w-xs">
+        <option value="all">All Dates</option>
+        <option value="overdue">Overdue</option>
+        <option value="today">Due Today</option>
+        <option value="future">Upcoming</option>
+      </select>
+    </nav>
 
-    <!-- List of Task -->
-        <section>
-            <header>
-                <h2 class="text-2xl font-semibold text-sky-600">Your Tasks</h2>
-            </header>
-            <nav aria-label="Task filters" class="flex flex-wrap gap-3 mb-5 items-center">
-                <div class="flex gap-1 bg-sky-100 rounded-lg border border-sky-300 overflow-hidden select-none">
-                <button class="filter-btn px-4 py-2 bg-white text-sky-800 font-semibold" data-filter="all" aria-pressed="true" type="button">All <span id="count-all" class="ml-1">(0)</span></button>
-                <button class="filter-btn px-4 py-2 text-sky-600 hover:bg-sky-200" data-filter="inprogress" aria-pressed="false" type="button">In Progress <span id="count-in-progress" class="ml-1">(0)</span></button>
-                <button class="filter-btn px-4 py-2 text-sky-600 hover:bg-sky-200 rounded-r-lg" data-filter="completed" aria-pressed="false" type="button">Completed <span id="count-completed" class="ml-1">(0)</span></button>
-                </div>
-            <select id="date-filter" aria-label="Filter by due date" class="border border-gray-300 rounded-lg p-2 cursor-pointer max-w-xs">
-                <option value="all">All Dates</option>
-                <option value="overdue">Overdue</option>
-                <option value="today">Due Today</option>
-                <option value="future">Upcoming</option>
-            </select>
-            </nav>
-            <table>
-                <thead>
-                <tr>
-                    <th class="px-4 py-3 border-r border-gray-300"><span class="sr-only">Select</span></th>
-                    <th class="px-4 py-3 border-r border-gray-300">Task</th>
-                    <th class="px-4 py-3 border-r border-gray-300">Due Date</th>
-                    <th class="px-4 py-3 border-r border-gray-300">Status</th>
-                    <th class="px-4 py-3">Action</th>
-                </tr>
-                </thead>
-            <tbody id="tasks-table-body" class="bg-white divide-y divide-gray-200 select-text"></tbody>
-            </table>
-        </section>
-    </main>
-
-    <footer>
-        <span>&copy; 2025 Nelly Sugianti. All rights reserved.</span>
+    <div style="overflow-x:auto" class="tasks-container">
+      <table class="min-w-full border-collapse border border-gray-200 text-gray-800">
+        <thead class="bg-sky-100 text-left text-sm font-semibold select-none">
+          <tr>
+            <th class="px-4 py-3 border-r border-gray-300"><span class="sr-only">Select</span></th>
+            <th class="px-4 py-3 border-r border-gray-300">Task</th>
+            <th class="px-4 py-3 border-r border-gray-300">Due Date</th>
+            <th class="px-4 py-3 border-r border-gray-300">Status</th>
+            <th class="px-4 py-3">Action</th>
+          </tr>
+        </thead>
+        <tbody id="tasks-table-body" class="bg-white divide-y divide-gray-200 select-text"></tbody>
+      </table>
+    </div>
+  </main>
+    <footer style="margin-top: 20px; text-align: center;">
+        <p>© 2025 Nelly Sugianti. All rights reserved.</p>
     </footer>
-
-    <!-- JS External -->
-    <script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
-
 </html>
